@@ -1,3 +1,4 @@
+2121 [Audio Encoder] Import() will be used for AVS input files. Bug #3506283
 2120 [MKV Muxer] improved handling of empty IDX subtitle files
 2119 [MKV Muxer] added job status message during muxing
 2118 [MediaInfo] improved information detection for DVD sources
